src/test/deca/syntax/invalid/intermediaire2/arithmetiques/04timesIncomplete.deca
// Description:
//    tests de programme incorrect lexicalement (operation sans operande de gauche)
//
// Resultats:
//  04timesIncomplete.deca:12:11:
//
// Historique:
//    cree le 16/06/2022

{
    int x;
    x = 1 *;
}
